# event-sequence-embeddings

./: .gitignore  club.py  cv_param_grid.yaml  dataset.py  eda.ipynb  eda2.ipynb  encoder.py  evaluation.py  loss.py  pyproject.toml  run_experiments.py  run_tests.py  train.py  training.py
