[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[project]
name = "ashdagasd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.6.8",
    "datasets>=4.7.0",
    "ipykernel>=7.2.0",
    "mlflow>=3.10.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]
